--- a/plugin.xml
+++ b/plugin.xml
@@ -21,12 +21,15 @@
 		</feature>
     </config-file>
 
+    <!--
     <framework src="com.google.android.gms:play-services-location:11.4.2" />
+    -->
+    <framework src="com.google.android.gms:play-services-location:9.8.0" />
 
   	<config-file target="AndroidManifest.xml" parent="/*">
       <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
       <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-      <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />          
+      <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
   	</config-file>
 
     <source-file src="src/android/com/diegorribeiro/MockLocationChecker.java" target-dir="src/com/diegorribeiro"/>
